need query builder class & remove getAllFiles